src/objects/EmailHistory__c.object
<CustomObject>
    <fields>
        <fullName>AcfOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Email History</relationshipLabel>
        <relationshipName>Email_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccRecipants__c</fullName>
        <label>CC Recipants</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>emailContent__c</fullName>
        <label>Email Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>recipants__c</fullName>
        <label>Recipants</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>subject__c</fullName>
        <label>subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Email History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Email-{0}</displayFormat>
        <label>Email History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>